--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -35,7 +35,7 @@ DoubleClickTime=0.200000
 -AxisMappings=(AxisName="MoveForward",Key=Gamepad_LeftY,Scale=1.000000)
 -AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
 -AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
--AxisMappings=(AxisName="MoveRight",Key=Gamepad_LeftX,Scale=1.000000)
+-AxisMappings=(AxisName="MoveRight",Key=Right,Scale=1.000000)
 -AxisMappings=(AxisName="TurnRate",Key=Gamepad_RightX,Scale=1.000000)
 -AxisMappings=(AxisName="TurnRate",Key=Left,Scale=-1.000000)
 -AxisMappings=(AxisName="TurnRate",Key=Right,Scale=1.000000)
@@ -45,7 +45,9 @@ DoubleClickTime=0.200000
 -AxisMappings=(AxisName="Tilt",Key=Tilt,Scale=1.000000)
 -AxisMappings=(AxisName="Gravity",Key=Gravity,Scale=1.000000)
 -AxisMappings=(AxisName="Acceleration",Key=Acceleration,Scale=1.000000)
--AxisMappings=(AxisName="Rotation Rate",Key=None,Scale=1.000000)
+-AxisMappings=(AxisName="Rotation Rate",Key=RotationRate,Scale=1.000000)
+-AxisMappings=(AxisName="MoveRight",Key=Left,Scale=1.000000)
+-AxisMappings=(AxisName="MoveRight",Key=Gamepad_LeftX,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=Up,Scale=1.000000)
@@ -53,7 +55,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveForward",Key=Gamepad_LeftY,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
-+AxisMappings=(AxisName="MoveRight",Key=Gamepad_LeftX,Scale=1.000000)
++AxisMappings=(AxisName="MoveRight",Key=Right,Scale=1.000000)
 +AxisMappings=(AxisName="TurnRate",Key=Gamepad_RightX,Scale=1.000000)
 +AxisMappings=(AxisName="TurnRate",Key=Left,Scale=-1.000000)
 +AxisMappings=(AxisName="TurnRate",Key=Right,Scale=1.000000)
@@ -64,6 +66,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Gravity",Key=Gravity,Scale=1.000000)
 +AxisMappings=(AxisName="Acceleration",Key=Acceleration,Scale=1.000000)
 +AxisMappings=(AxisName="Rotation Rate",Key=RotationRate,Scale=1.000000)
++AxisMappings=(AxisName="MoveRight",Key=Left,Scale=-1.000000)
++AxisMappings=(AxisName="MoveRight",Key=Gamepad_LeftX,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=None
@@ -72,4 +76,5 @@ ConsoleKey=None
 -ConsoleKeys=#
 +ConsoleKeys=Tilde
 +ConsoleKeys=#
+
 
